# PuzzleMender

./: .gitignore  LICENSE  README.md  gui_stitch.py  pyproject.toml  run_gaps_stitch.py
docs/plans/: 2026-05-11-gui-polish-design.md  2026-05-11-gui-polish-implementation.md  2026-05-11-rectangular-adaptive-mode.md  2026-05-11-structure-refactor.md
gaps/gaps/: cli.py  genetic_algorithm.py  progress_bar.py
puzzle_stitcher/: __init__.py  gui_launch.py  paths.py  stitcher.py  ui_theme.py
scripts/: build_exes.ps1
skills/gaps-stitch-cli/: SKILL.md
skills/gaps-stitch-cli/evals/: evals.json
tests/: test_gui_launch.py  test_packaging_slimming.py  test_paths.py  test_run_gaps_stitch.py  test_stitcher.py  test_ui_theme.py
